--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FF5629D8"
-    tools:context=".PresentationLayer.View.MainActivity">
+    tools:context=".presentation.view.MainActivity">
 
 
     <android.support.v7.widget.RecyclerView
